[refactor] Use URI route to create URL